# vodparty

./: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  server.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
netlify/functions/: proxy.ts  pusher-auth.ts
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: HlsPlayer.tsx  Layout.tsx  VideoCard.tsx
src/config/: pusher.ts
src/pages/: History.tsx  Home.tsx  Player.tsx  Search.tsx  Settings.tsx
src/services/: api.ts  history.ts  preferences.ts  storage.ts
